tests/cases/vectors/errors/vector-method-static-index-out-of-range.ari
fn main() -> i64 {
  let values: Vec[i64] = [3, 5];
  return values.get(2);
}
